title & general info added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="departamento">Antioquia</string>
+    <string name="general_info">Antioquia es uno de los departamentos de Colombia. Está localizado en la zona noroccidental del país. Su capital es Medellín, segunda ciudad en población y economía de la nación.
+En Antioquia, los veranos son cortos y cálidos, los inviernos son cortos y calurosos y está mojado y nublado todo el año.</string>
+    <string name="sitios_recomendados_title">Sitios recomendados</string>
 </resources>
